[package]
name = "genetic_algorithm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies that work on all platforms
rand = "0.8.5"
rand_distr = "0.4.3"
getrandom = { version = "0.2.10", features = ["js"] }
serde = "1.0.216"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.99"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
colored = "2.0.0"
crossterm = "0.28.1"
eframe = "0.28.1"
egui = "0.28.1"
egui_plot = "0.28.1"
getopts = "0.2.21"
